# particle_system

./: CMakeLists.txt  ISpatialObject.h  README.md  README.txt  Vector3.h  base.h  fshader2.glsl  fshader4.glsl  main.cpp  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.cpp.autosave  mypanelopengl.h  notes.txt  octree.cpp  octree.h  particle.cpp  particle.h  vshader2.glsl  vshader4.glsl
Proposal/: Makefile  proposal.aux  proposal.tex
paper/: 00-abstract.tex  01-introduction.tex  01.5-progress.tex  01.6-progress2.tex  02-related.tex  03-design.tex  04-implementation.tex  05-evaluation.tex  06-conclusion.tex  bibliography.bib  paper.aux  paper.bbl  paper.blg  paper.dvi  paper.tex
